--- a/vfrnav_efb/EFB/release_notes.json
+++ b/vfrnav_efb/EFB/release_notes.json
@@ -13,11 +13,11 @@
          "version": "0.1.1",
          "date": "JANUARY 5, 2025",
          "notes": [
-            "Improvements / améliorations:",
+            "***🔧 Improvements / Améliorations:***",
             "  - Enhanced text overlay readability on the map / Amélioration de la lisibilité du texte affiché sur la carte.",
             "  - Automatically hide layers when their min/max zoom levels are reached / Les layers sont maintenant masqués lorsque leurs niveaux de zoom minimum ou maximum sont atteints.",
             "",
-            "Fixes:",
+            "***🐞 Fixes / Corrections:***",
             "  - Drag & Drop no longer triggers on mouse clicks / Le Drag & Drop n'est plus déclenché lors des clics.",
             "  - Font loading issue resolved, improving text display quality / Correction du chargement des polices, améliorant l'affichage du texte.",
             "  - Fixed glitches occurring when hovering over navigation item labels / Correction des glitches lors du survol des labels des éléments de navigation."
@@ -27,10 +27,10 @@
          "version": "0.1.2",
          "date": "JANUARY 21, 2025",
          "notes": [
-            "Improvements / améliorations:",
+            "***🔧 Improvements / Améliorations:***",
             "  - General performance enhancements / Amélioration globale des performances.",
             "",
-            "Fixes:",
+            "***🐞 Fixes / Corrections:***",
             "  - Resolved scrollbar glitches / Correction des anomalies liées à la barre de défilement."
          ]
       },
@@ -38,7 +38,7 @@
          "version": "0.2.0",
          "date": "JANUARY 26, 2025",
          "notes": [
-            "Improvements / améliorations:",
+            "***🔧 Improvements / Améliorations:***",
             "  - Optimized overall performance / Optimisation des performances générales.",
             "  - Added preliminary support for PDF files (preview version) / Ajout du support des fichiers PDF (version préliminaire).",
             "  - Introduced new settings for enabling or disabling layers / Ajout de paramètres permettant l'activation ou la désactivation des layers."
@@ -48,7 +48,7 @@
          "version": "0.2.1",
          "date": "FEBRUARY 1, 2025",
          "notes": [
-            "Improvements / améliorations:",
+            "***🔧 Improvements / Améliorations:***",
             "  - Added settings for display customization / Ajout de paramètres permettant la personnalisation de l'affichage.",
             "  - Made settings persistent across simulator loads / Paramètres désormais conservés entre les chargements du simulateur.",
             "  - Automatically close navigation menu when drawing navigation legs / Fermeture automatique du menu de navigation lors du tracé des branches.",
@@ -59,10 +59,10 @@
          "version": "0.2.2",
          "date": "FEBRUARY 5, 2025",
          "notes": [
-            "Improvements / améliorations:",
+            "***🔧 Improvements / Améliorations:***",
             "  - General performance enhancements / Amélioration globale des performances.",
             "",
-            "Fixes:",
+            "***🐞 Fixes / Corrections:***",
             "  - Resolved app crash issue when loading multiple documents / Correction du crash de l'application lors du chargement de plusieurs documents.",
             "  - Improved detection and loading of PDF fonts / Optimisation de la détection et du chargement des polices pour les fichiers PDF."
          ]
@@ -71,7 +71,7 @@
          "version": "0.3.0",
          "date": "FEBRUARY 9, 2025",
          "notes": [
-            "Improvements / améliorations:",
+            "***🔧 Improvements / Améliorations:***",
             "  - Removed OACI map's white background for a clearer display / Suppression du fond blanc de la carte OACI pour un affichage plus net.",
             "  - Added AZBA layer support / Ajout du layer AZBA.",
             "  - Introduced buttons for zooming in and out of PDFs / Ajout de boutons permettant de zoomer sur les fichiers PDF.",
@@ -83,7 +83,7 @@
          "version": "0.3.1",
          "date": "FEBRUARY 16, 2025",
          "notes": [
-            "Fixes :",
+            "***🐞 Fixes / Corrections:***",
             "  - Corrected navigation leg headings (0° for north) / Correction de l'orientation des branches de navigation (0° au nord).",
             "  - Fixed navigation leg time display / Correction de l'affichage des heures des branches de navigation."
          ]
@@ -92,7 +92,7 @@
          "version": "0.3.2",
          "date": "FEBRUARY 17, 2025",
          "notes": [
-            "Fixes :",
+            "***🐞 Fixes / Corrections:***",
             "  - Corrected navigation leg distance calculations / Correction des calculs de distances des branches de navigation."
          ]
       },
@@ -100,57 +100,60 @@
          "version": "0.3.3",
          "date": "FEBRUARY 24, 2025",
          "notes": [
-            "Fixes:",
-            "  - Resolved MSFS native slider bug / Correction du bug des sliders natifs MSFS.",
+            "***🔧 Improvements / Améliorations:***",
+            "  - Set the app as a favorite by default / Forçage de l'application à être marquée comme favorite.",
             "",
-            "Improvements / améliorations:",
-            "  - Set the app as a favorite by default / Forçage de l'application à être marquée comme favorite."
+            "***🐞 Fixes / Corrections:***",
+            "  - Resolved MSFS native slider bug / Correction du bug des sliders natifs MSFS."
          ]
       },
       {
          "version": "0.4.0",
          "date": "MARCH 17, 2025",
          "notes": [
-            "Fixes:",
-            "  - Prevented settings from resetting across updates / Empêche la réinitialisation des paramètres entre les mises à jour.",
-            "",
-            "Improvements / améliorations:",
+            "***🔧 Improvements / Améliorations:***",
             "  - Added an Airports layer displaying METAR, frequency, and additional information / Ajout d'un layer affichant les aéroports avec des informations sur les METARs, fréquences, etc.",
             "  - Integrated OpenFlightMap layer support / Ajout du layer OpenFlightMap.",
             "  - Introduced an option to display aircraft on the map (must be enabled in the settings page) / Ajout de la possibilité de voir la position de l'avion (doit être activé dans la page des paramètres).",
-            "  - Added a new page for viewing flight and touchdown records / Ajout d'une page permettant d'afficher les enregistrements de vols et d'atterrissages."
+            "  - Added a new page for viewing flight and touchdown records / Ajout d'une page permettant d'afficher les enregistrements de vols et d'atterrissages.",
+            "",
+            "***🐞 Fixes / Corrections:***",
+            "  - Prevented settings from resetting across updates / Empêche la réinitialisation des paramètres entre les mises à jour."
          ]
       },
       {
          "version": "0.4.1",
          "date": "MARCH 19, 2025",
          "notes": [
-            "Fixes:",
+            "***🔧 Improvements / Améliorations:***",
+            "  - Added an option to hide ground level on the flight record layer / Ajout de la possibilité de masquer le niveau du sol sur le layer d'enregistrement des vols.",
+            "",
+            "***🐞 Fixes / Corrections:***",
             "  - Ensured touchdown labels are always displayed above recorded flight paths / Affichage forcé des labels de touchdown au-dessus des chemins d'enregistrement de vol.",
             "  - Optimized memory usage for flight recording / Optimisation de l'utilisation de la mémoire pour l'enregistrement des vols.",
             "  - Fixed encoding issues in tab labels on the airport info popup / Correction des problèmes d'encodage des labels des onglets de la popup d'information des aéroports.",
-            "",
-            "Improvements / améliorations:",
-            "  - Added an option to hide ground level on the flight record layer / Ajout de la possibilité de masquer le niveau du sol sur le layer d'enregistrement des vols."
          ]
       },
       {
          "version": "1.0.0",
          "date": "MAY 25, 2025",
          "notes": [
-            "**ALL**",
-            "  Fixes:",
-            "     - SU12: Application malfunction / SU12: Dysfonctionnement de l'application",
-            "  Improvements / améliorations:",
+            "### ALL ###",
+            "***🔧 Improvements / Améliorations:***",
             "     - Menu items adjust to DPI settings / Les éléments du menu s'adaptent aux paramètres DPI",
             "",
-            "**Installer/Server (new)**",
-            "  Improvements / améliorations:",
+            "***🐞 Fixes / Corrections:***",
+            "     - SU12: Application malfunction / SU12: Dysfonctionnement de l'application",
+            "",
+            "",
+            "### Installer/Server (new) ###",
+            "***🔧 Improvements / Améliorations:***",
             "     - Added the ability to load PDF files from the computer / Ajout de la possibilité de charger des fichiers PDF depuis le PC.",
             "     - Added functionality to open the EFB directly from the app, enhancing preflight and postflight navigation / Ajout de la fonctionnalité permettant d'ouvrir l'EFB directement depuis l'application, améliorant la navigation pré et post vol.",
             "",
+            "",
             "### EFB ###",
-            "  Improvements / améliorations:",
+            "***🔧 Improvements / Améliorations:***",
             "     - Increased text size in AZBA and airport information popups / Augmentation de la taille du texte des popups AZBA et des informations sur les aéroports.",
             "     - Enhanced the visual presentation of AZBA and airport information popups / Amélioration de la présentation des popups AZBA et des informations sur les aéroports."
          ]
@@ -160,7 +163,7 @@
          "date": "MAY 26, 2025",
          "notes": [
             "### EFB ###",
-            "  Improvements / améliorations:",
+            "***🔧 Improvements / Améliorations:***",
             "     - Show server status on the \"local\" tab of the PDF popup / Afficher le statut du serveur sur l'onglet \"local\" du popup PDF.",
             "     - Fix validation of the SIA input field / Corriger la validation du champ SIA."
          ]
@@ -169,8 +172,8 @@
          "version": "1.1.0",
          "date": "MAY 27, 2025",
          "notes": [
-            "**Installer/Server (new)**",
-            "  Improvements / améliorations:",
+            "### Installer/Server (new) ###",
+            "***🔧 Improvements / Améliorations:***",
             "     - Enable the option to upload navigation data from the app to the EFB / Ajoute la possibilité de synchroniser les données de navigation de l'application vers l'EFB",
             "     - General bug fixes / Correction de bugs"
          ]
@@ -180,7 +183,7 @@
          "date": "JUN 15, 2025",
          "notes": [
             "### EFB ###",
-            "  Improvements / améliorations:",
+            "***🔧 Improvements / Améliorations:***",
             "     - Add OpenAPI Layer (preview; performance is not optimized, there are some glitches) / Ajout du layer OpenAPI (aperçu; les performances ne sont pas optimisées, possède quelques glitches)."
          ]
       },
@@ -189,15 +192,18 @@
          "date": "JUL 6, 2025",
          "notes": [
             "### EFB ###",
-            "  Improvements / améliorations:",
+            "***🔧 Improvements / Améliorations:***",
             "     - Move \"Record settings\" to a new bottom toolbar / Paramètres de records déplacés dans une nouvelle barre d’outils en bas de l'EFB.",
             "     - Enable mouse wheel interaction for sliders / Interaction avec la molette de la souris ajoutée pour les curseurs.",
             "     - Added Navlog / Ajout d'un Navlog.",
             "     - Added a search bar to locate airports / Ajout d’une barre de recherche pour localiser les aéroports.",
-            "**Installer/Server (new)**",
-            "  Improvements / améliorations:",
+            "",
+            "",
+            "### Installer/Server (new) ###",
+            "***🔧 Improvements / Améliorations:***",
             "     - Port now sent to EFB via SimConnect / Le port est désormais transmis à l’EFB via SimConnect.",
-            "  Fixes:",
+            "",
+            "***🐞 Fixes / Corrections:***",
             "     - Memory leak resolved — Segfault fix / Fuite de mémoire corrigée — Résolution d'un Segfault."
          ]
       },
@@ -206,13 +212,16 @@
          "date": "JUL 13, 2025",
          "notes": [
             "### EFB ###",
-            "  Improvements / améliorations:",
+            "***🔧 Improvements / Améliorations:***",
             "     - Automatically adjust font and icon sizes based on DPI changes / Ajuste dynamiquement la taille des polices et des icônes selon les changements de DPI.",
-            "  Fixes:",
+            "",
+            "***🐞 Fixes / Corrections:***",
             "     - Correct label positioning when adding a waypoint—new labels are now inserted at the correct index instead of appended at the end / Correction de la position des labels lors de l’ajout d’un point de navigation : les nouveaux labels sont maintenant insérés à l’index courant, et non ajoutés à la fin.",
             "     - Fixed crash when deleting the final waypoint / Correction du crash survenant lors de la suppression du dernier point de navigation.",
-            "**Installer/Server (new)**",
-            "  Improvements / améliorations:",
+            "",
+            "",
+            "### Installer/Server (new) ###",
+            "***🔧 Improvements / Améliorations:***",
             "     - Added support for exporting PDF charts from the app to the embedded EFB / Ajout de la possibilité d’exporter des cartes PDF depuis l’application vers l’EFB intégré."
          ]
       },
@@ -226,7 +235,8 @@
             "       Amélioration de l'affichage des fenêtres contextuelles d'information SIA/aéroport pour une meilleure lisibilité et interaction utilisateur.",
             "     - Integrated option to download chart PDFs directly from the SIA source within airport information pages.",
             "       Ajout de l'option permettant de télécharger les cartes PDF directement depuis la source SIA via les pages d'information aéroport.",
-            "  🐞 Fixes / Corrections:",
+            "",
+            "***🐞 Fixes / Corrections:***",
             "     - Resolved issue with incorrect timezone and summer time settings for AZBA.",
             "       Correction du problème lié au fuseau horaire et à l'heure d'été incorrects pour AZBA."
          ]
@@ -243,7 +253,8 @@
             "       Amélioration des performances du layer d'enregistrement de vols.",
             "     - Add measurement rules to Records layer.",
             "       Ajout de règles de mesure pour le layer des enregistrement de vols.",
-            "  🐞 Fixes / Corrections:",
+            "",
+            "***🐞 Fixes / Corrections:***",
             "     - Restore ICAO search bar suggestions.",
             "       Restore les suggestion de la bar de recherche ICAO."
          ]
@@ -302,7 +313,8 @@
             "       Amélioration de l'accessibilité des barres de défilement.",
             "     - Option to hide waypoint labels in navlog for better readability.",
             "       Ajout de la possibilité de masquer les labels de waypoints dans la page de navlog pour améliorer la lisibilité.",
-            "🐞 Fixes / Corrections:",
+            "",
+            "***🐞 Fixes / Corrections:***",
             "     - ATA color (red/green) now displays correctly around midnight.",
             "       Correction de l'affichage de la couleur du champ ATA (rouge/vert) aux alentours de minuit."
          ]
